<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.login.LoginActivity">

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/bgColorPrimary"
            android:elevation="2dp">

        <ImageView
                android:id="@+id/ivClose"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="start"
                android:layout_marginStart="4dp"
                android:tint="@color/textColorPrimary"
                android:background="?actionBarItemBackground"
                android:padding="12dp"
                android:src="@drawable/ic_close_black_24dp" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:text="@string/login"
                android:textSize="16sp" />
    </FrameLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bgColorPrimary"
            android:gravity="center_horizontal"
            android:orientation="vertical">

        <ImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginTop="48dp"
                android:src="@drawable/ic_android"
                android:tint="@color/textColorPrimary" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="serif"
                android:text="@string/wanandroid"
                android:textColor="@color/textColorPrimary"
                android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/account">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/textColorPrimary"
                    android:textColorHighlight="@color/textColorPrimary"
                    android:textColorHint="@color/textColorThird"
                    android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/password"
                android:textColorHint="@color/textColorThird"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/textColorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionGo"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:maxLines="1"

                    android:singleLine="true"
                    android:textColor="@color/textColorPrimary"
                    android:textColorHighlight="@color/textColorPrimary"
                    android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/shape_bg_btn"
                android:text="@string/login"
                android:textColor="@color/textColorPrimary"
                android:textSize="14sp" />

        <TextView
                android:id="@+id/tvGoRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="8dp"
                android:text="@string/go_register"
                android:textColor="@color/textColorPrimary"
                android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>